--- a/CssSpot.css
+++ b/CssSpot.css
@@ -105,9 +105,6 @@ main {
     color: grey;
     letter-spacing: 2px;
 }
-.list-inline a:hover{
-    color: white;
-}
 .toplist {
     align-self: center;
 }
@@ -158,17 +155,45 @@ footer {
     overflow: hidden;
     color: grey;
 }
-.list-inline{
+.list-inline1 a:hover{
+    color: white;
+}
+.list-inline1 i {
+    padding: 20px 20px 0 0;
+    font-size: 40px;
+}
+.list-inline1{
     display: flex;
     align-items: center;
     position: relative;
     bottom: 20px;
     left: -6%;
 }
-.list-inline i {
+.list-inline1 .fa-pause{
+    display: none;
+}
+.list-inline1.playing{
+    display: inline-flex;
+    align-items: center;
+    position: relative;
+    bottom: 20px;
+    left: -6%;
+}
+.list-inline1.playing a:hover{
+    color: white;
+}
+.list-inline1.playing .fa-pause{
+    display: inline-flex;
+}
+.list-inline1.playing .fa-play-circle{
+    display: none;
+}
+
+.list-inline1.playing i{
     padding: 20px 20px 0 0;
     font-size: 40px;
 }
+
 footer img{
     display: flex;
     position: fixed;
@@ -193,7 +218,7 @@ footer img{
     color: white;
     font-size: 20px;
     position: fixed;
-    left: 200px;
+    right: 200px;
     bottom: 20px;
     margin-right: 10px;
 }
@@ -230,8 +255,13 @@ footer img{
     width: 18%;
     font-size: 14px;
 }
+input[type=range]{
+    width: 30%;
+}
 
 .col-progress{
+
+    color: green;
     margin-right: 15px;
     width: 30%;
     height: 4px;
